Downgrade code to Java 8
Fixes #13